--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "/"
 languageCode = "en-us"
 title = "Education Data Done Right"
 theme = "hugo-lithium"
-googleAnalytics = ""
+googleAnalytics = "UA-53342829-3"
 # disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
