--- a/config.toml
+++ b/config.toml
@@ -48,25 +48,24 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxCDN = "//cdnjs.cloudflare.com/ajax/libs"
     MathJaxVersion = "2.7.5"
     # path to the favicon, under "static"
-    #favicon = "favicon.ico"
+    favicon = "favicon.ico"
 
 [params.logo]
     url = "logo.png"
     width = 50
     height = 50
     alt = "Logo"
-    
+
 
 [params.banner]
-    enable = false  
-    
+    enable = false
+
 [params.about]
         enable  = false
 
 [params.cta]
     enable = false
-    
-    
+
+
 [params.portfolio]
     enable = false
-
