--- a/themes/timer-hugo/theme.toml
+++ b/themes/timer-hugo/theme.toml
@@ -8,5 +8,5 @@ features = ['bootstrap','responsive']
 min_version = "0.42"
 
 [author]
-  name = "Themefisher"
+  name = "Education Data Done Right"
   homepage = "https://themefisher.com/"
