--- a/config.toml
+++ b/config.toml
@@ -49,6 +49,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     MathJaxVersion = "2.7.5"
     # path to the favicon, under "static"
     favicon = "favicon.ico"
+    logo = "logo.png"
 
 [params.logo]
     url = "logo.png"
