--- a/config.toml
+++ b/config.toml
@@ -55,6 +55,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [params.banner]
     enable = true
     bgImage ="banner_test.jpg"
+    heading = "banner_test.jpg"
 
 [params.about]
         enable  = false
