--- a/themes/timer-hugo/theme.toml
+++ b/themes/timer-hugo/theme.toml
@@ -9,4 +9,4 @@ min_version = "0.42"
 
 [author]
   name = "Education Data Done Right"
-  homepage = "https://themefisher.com/"
+  homepage = "https://eddatadoneright.com"
