--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "http://www.eddatadoneright.com"
 languageCode = "en-us"
 title = "Education Data Done Right"
 theme = "timer-hugo"
